# sambil

./: Cargo.toml  LICENSE  README.md  plan.md  roadmap.md
app/: Cargo.toml
app/src/: config.rs  input.rs  main.rs  pane.rs  pane_manager.rs  renderer.rs
app/tests/: e2e_direct_nav.rs  e2e_paste.rs  e2e_quit.rs  e2e_rename.rs  e2e_scrollback.rs  e2e_split.rs  e2e_undo_close.rs
app/tests/common/: mod.rs
as_source/: Cargo.toml
as_source/src/: lib.rs
as_source_macros/: Cargo.toml
as_source_macros/src/: lib.rs
src/: cell.rs  config.rs  cursor.rs  debug_log.rs  input.rs  main.rs  pane.rs  pane_manager.rs  renderer.rs  scroll.rs  size.rs
tests/: e2e_close_tab.rs  e2e_colour.rs  e2e_config.rs  e2e_direct_nav.rs  e2e_harness.rs  e2e_help.rs  e2e_input.rs  e2e_naming.rs  e2e_paste.rs  e2e_quit.rs  e2e_rename.rs  e2e_renderer.rs  e2e_resize.rs  e2e_scrollback.rs  e2e_shell_exit.rs  e2e_split.rs  e2e_startup.rs  e2e_tabbar.rs  e2e_tabs.rs  e2e_title.rs  e2e_undo_close.rs
tests/common/: mod.rs
